# shuttlings-cch24

./: .gitignore  Cargo.toml  Shuttle.toml
.sqlx/: query-024ce19816c4914ea50ce446905b783f65a727ce26370743aff41eb53a4bc11b.json  query-9cafc06384421c67313676e16f5acb05a5d470803e07b47ed9bf3227cd3435fa.json  query-cecda3b843b05a6e2cf7ab8d641ab25f5d7548dcb448ea5ecd6b69140e820cfd.json  query-d38e2e23ba8258644d28c354c1b7627d0f7a2dafa357436f44080640a8fdf4ea.json
src/: lib.rs  main.rs
src/solutions/: day01.rs  day02.rs  day05.rs  day09.rs  day12.rs  day16.rs  day19.rs
