[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
http-body-util = "0.1.2"
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
tower = { version = "0.5.1", features = ["util"] }
